2011-07-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.3-alpha-2.1 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-07-11  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update mingw32-pthreads; coordinate publication with gcc.
	* mingw32/mingw32-pthreads-w32.xml: Restructure & rename.
	Update to 2.9.0-pre snapshot from 20110507. New packages:
	mingw32-libpthreadgc, mingw32-libpthreadgce, mingw32-libquserex,
	and mingw32-libpthread-old (containing just libpthread-2.dll for
	backwards compatibility).
	* mingw32/issue.: Update accordingly.

2011-06-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.3-alpha-2 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-06-05  Earnie Boyd  <earnie@users.sourceforge.net>

	Add new aliases for mingw32-base and msys-base
	* mingw32/mingw32-base.xml: Add 'mingw' and 'mingw32' aliases
	for mingw32-base.
	* mingw32/issue.log: Update accordingly.
	* msys/msys-base.xml: Add 'msys' alias for msys-base.
	* msys/issue.log: Update accordingly.

2011-05-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Work around MSYS' `openssl sha1' output format anomaly.

	* Makefile.comm.in (sha1sum): New macro; define it.
	(sha1hash): Use it.

2011-05-30  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	Update & publish msys-mintty.

	* msys/msys-mintty.xml: Update to 0.9.8-1.
	* msys/issue.log: Updated accordingly.

2011-05-30  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Update for mingw-get-0.3-alpha-1 release.

	* mingw32/mingw32-mingw-get.xml: Add release entries.
	* mingw32/issue.log: Update accordingly.

2011-05-21  Charles Wilson  <mingw@cwilson.fastmail.fm>

	Update & publish mingw32-bzip2.

	* mingw32/mingw32-bzip2.xml: Update to 1.0.6-1
	* mingw32/issue.log: Updated accordingly.
