@@ -65,7 +65,7 @@
   ec5afb31494c1b3406a55b0fb370748021c54e70 2010080900 msys-make.xml
   ab247fb69c9891a5988890ddb71d7ad14f9fd8b5 2010090600 msys-man.xml
   23034cbb3524c78949550109086d88a1decbf237 2010090500 msys-minires.xml
-  d3f40232c1e9faa7dc37786e283524548b1805a5 2011053100 msys-mintty.xml
+  f0c809e99c44e3c3c4cc22ce5e1c730bb6896daf 2011073101 msys-mintty.xml
   67d785915f786d195fd2fab5a0b59fad0337b6c5 2010090500 msys-mktemp.xml
   3bd4da5adb392657a7f4e28715c30aee87c6e5a9 2010090600 msys-openssh.xml
   2902a92042e440f0b0f46ef8fdb3c0c17af48d63 2010090600 msys-openssl.xml
