@@ -1,3 +1,10 @@
+2011-07-31  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>
+
+	Update & publish msys-mintty.
+
+	* msys/msys-mintty.xml: Update to 1.0.1-1.
+	* msys/issue.log: Updated accordingly.
+
 2011-07-29  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Update for mingw-get-0.3-alpha-2.1 release.
